@@ -24,6 +24,9 @@ to meta type).  (Bug: 2389901). Reported by Barry Grundy.
 shown if the MFT address was changed to 0 because fs_dir_add was
 checking the address and name.  Reported by Andy Bontoft.
 
+1/29/09: Update: Fixed fix for bug 2534449.  The fix is in ifind
+instead of fs_dir_add().
+
 ---------------- VERSION 3.0.0 -------------- 
 0/00/00: Update: Many, many, many API changes.
 
